# team.cpp

./: CMakeLists.txt  CODEBASE.md  README.md  build.bat  data.txt  debug_raylib.bat  inventory.txt  workforce.txt
src/: DataTypes.cpp  Employee.cpp  FileManager.cpp  Garment.cpp  GuiApp.cpp  GuiComponents.cpp  GuiComponents.h  GuiTheme.cpp  GuiTheme.h  HRManager.cpp  InventoryManager.cpp  Machine.cpp  Order.cpp  OrderManager.cpp  ProductionOrder.cpp  QualityManager.cpp  User.cpp  Worker.cpp  main.cpp
